# geo-1016-assignments

./: .gitignore  .gitmodules  README.md
01/A1_Calibration_Code/: CMakeLists.txt
01/A1_Calibration_Code/Calibration/: CMakeLists.txt  calibration.cpp  calibration.h  calibration_method.cpp  calibration_method_base.cpp  main.cpp  matrix.h  matrix_algo.cpp  matrix_algo.h
01/A1_Calibration_Code/easy3d/core/: CMakeLists.txt  constant.h  graph.cpp  manifold_builder.h  random.h  signal.h
01/A1_Calibration_Code/easy3d/fileio/: CMakeLists.txt  resources.cpp  resources.h  surface_mesh_io.cpp  surface_mesh_io.h  surface_mesh_io_obj.cpp
01/A1_Calibration_Code/easy3d/util/: line_stream.h  stop_watch.cpp  string.h  threading.cpp  threading.h
01/A1_Calibration_Code/easy3d/viewer/: drawable.cpp  drawable_lines.cpp  drawable_lines.h  drawable_triangles.h  framebuffer_object.cpp  framebuffer_object.h  model.h  (+10 more)
01/Output/: data_Daan_1_cube_6-points.txt  test_data_Jerry(6_points)-handmade.txt
01/no_viewer/: CMakeLists.txt  main.cpp  vector.h
01/with_viewer/: CMakeLists.txt
01/with_viewer/Imaging/: CMakeLists.txt  imaging.cpp  main.cpp  matrix.h  viewer.cpp  viewer.h
01/with_viewer/easy3d/: CMakeLists.txt
02/A2_Triangulation_Code/: CMakeLists.txt  LICENSE
02/A2_Triangulation_Code/Triangulation/: CMakeLists.txt  main.cpp  matrix_algo.h  triangulation.cpp  triangulation.h  triangulation_method.cpp
02/A2_Triangulation_Code/Tutorial_NonlinearLeastSquares/: CMakeLists.txt  main.cpp
02/A2_Triangulation_Code/easy3d/: CMakeLists.txt
03/: poisson_recon.py  polyfit_recon.py
(+192 files in other folders)
